tooling/nargo_cli/tests/snapshots/execution_success/regression_5045/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
assertion_line: 381
expression: expanded_code
---
use std::embedded_curve_ops::{EmbeddedCurvePoint, EmbeddedCurveScalar};

fn main(is_active: bool) {
    let a: EmbeddedCurvePoint = EmbeddedCurvePoint {
        x: 13369208703810469428642933335211858179748250278026939592718845896191201195622_Field,
        y: 2726875754519434671146873023426441956600113087238248464305840046775215989920_Field,
    };
    if is_active {
        let bad: EmbeddedCurvePoint = EmbeddedCurvePoint::new(0_Field, 5_Field);
        let d: EmbeddedCurvePoint = bad.double();
        let e: EmbeddedCurvePoint = std::embedded_curve_ops::multi_scalar_mul(
            [a, bad],
            [
                EmbeddedCurveScalar { lo: 1_Field, hi: 0_Field },
                EmbeddedCurveScalar { lo: 1_Field, hi: 0_Field },
            ],
        );
        assert(e.x != d.x);
    }
}
